@@ -29,6 +29,7 @@
 19. Change toolbar colours if palette changes.
 20. Add another qt5ct palette work-around.
 21. Don't stop library scan just because of failure in 1 directory.
+22. Handle empty VolumeIdentifier in MTP devices.
 
 2.3.2
 -----
